--- a/style.css
+++ b/style.css
@@ -22,3 +22,14 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+.container {
+    width: 480px;
+    height: 330px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.4);
+}
